# dafne-monai-inference

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/dafne_inference/: inference.py  networks.py  transforms.py  utils.py
src/dafne_monai_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
