[metadata]
name = dafne-monai-inference
version = 0.1.1
author = GiuseppeTimpano
author_email = giuseppe.timpano@unicz.it
description = Lightweight inference package for dafne models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0
    numpy>=1.24
    monai>=1.3
    scikit-image>=0.19                
include_package_data = True

[options.packages.find]
where = src
